--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,9 +1,17 @@
+=== 1.2.0 / 2012-09-26
+
+* Enhancements:
+
+  * Gracefully handle duplicate dependency declarations the way Gem::Specification does.
+
+
 === 1.1.0 / 2011-03-20
 
 * Enhancements:
 
   * Warning message ("Do not edit") in the generated Gemfile. (thanks to phiggins)
   * Infer version ">=0" when people don't specify a version in their Hoe config. (thanks to phiggins)
+
 
 === 1.0.0 / 2010-07-21
 
