--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,10 @@
+=== 1.3.0 / 2016-06-06
+
+Enhancements:
+
+* Add support for multiple version specs.
+
+
 === 1.2.0 / 2012-09-26
 
 * Enhancements:
